# specproof

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile.api  PROMPT_PACK_AFTER_PHASE0.txt  compose.p1.yml  compose.phase0.yml  pyproject.toml
.github/workflows/: quality.yml
agent/: __init__.py  graph.py  preflight.py  security_scanner.py  state.py  worker.py
agent/nodes/: __init__.py  build_matrix.py  collect_diff.py  compile_contracts.py  create_capsule.py  generate_counterexamples.py  intake.py  prepare_base.py  prepare_head.py  publish_report.py  review_court.py  run_differential.py  run_static_checks.py
agent/review_court/: __init__.py
api/: __init__.py  server.py
artifacts/legacy-invalid/: AuthDbStateRegressionTest.java.human_fixture  AuthDbStateRegressionTest.java.human_fixture.README.md  README.md  p0_5_acceptance_report_P0_5-32EAD58D.json  p0_5_acceptance_report_P0_5-5ECF7092.json  p0_5_acceptance_report_P0_5-CC7E5BBE.json
cli/: __init__.py
cli/specproof/: __init__.py  main.py
demo/: requirement.txt
demo/spring-backend/: docker-compose.yml  mvnw  mvnw.cmd  pom.xml
docs/: ARCHITECT_CLAUDE.md  FIRST_PROMPT.txt  PRODUCTION_SPEC.txt
docs/p1/: p1a-final-report.md  wip-migration-matrix.md
evidence/: __init__.py  certificate.py  matrix.py  report.py
golden-cases/: split.json
golden-cases/case-01-auth-bypass/: ground-truth.json  spec.md
golden-cases/case-02-transactional-removal/: ground-truth.json  spec.md
golden-cases/case-03-clean-pr/: spec.md
golden-cases/case-04-duplicate-email/: ground-truth.json  spec.md
golden-cases/case-05-token-invalidation/: ground-truth.json  spec.md
golden-cases/case-06-schema-break/: ground-truth.json  spec.md
golden-cases/case-07-duplicate-event/: ground-truth.json  spec.md
providers/: __init__.py  base.py  capability_probe.py  openai_compatible.py  probe_result.py
scripts/: p0_5_closed_loop.py  provider_smoke.py  run_differential.sh  test_c6_junit_diff.py  test_llm_contract.py  verify_p0_5_archive.py
storage/: __init__.py  elasticsearch.py  minio.py  mongodb.py  mysql.py  outbox_relay.py  rabbitmq.py  redis.py
tests/: __init__.py  conftest.py
(+79 files in other folders)
