[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specproof"
version = "0.1.0"
description = "Independent Acceptance Verification for Agent-Generated Backend Changes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "SpecProof Team"}]
keywords = ["verification", "code-review", "agent", "acceptance-testing"]

dependencies = [
    "click>=8.1.7",
    "langgraph>=0.4.0",
    "langgraph-checkpoint>=2.0.0",
    "openai>=1.50.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "pydantic>=2.10.0",
    "pymysql>=1.1.1",
    "pymongo>=4.10.0",
    "elasticsearch>=8.16.0",
    "redis>=5.2.0",
    "pika>=1.3.2",
    "minio>=7.2.10",
    "pyyaml>=6.0.2",
    "GitPython>=3.1.43",
    "docker>=7.1.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.7.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "responses>=0.25.0",
]

[project.scripts]
specproof = "cli.specproof.main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
disallow_any_unimported = false
warn_redundant_casts = true
exclude = ["tests/", "artifacts/", "demo/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests that require real infrastructure (MySQL, RabbitMQ, Redis)",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]
